Correct Programs Issue,#1

--- a/Q2/q2.html
+++ b/Q2/q2.html
@@ -10,6 +10,9 @@
 			<area shape="rect" coords="0,0,82,170" href="abc.html" alt="Mumbai">
 			<area shape="circle" coords="90,58,3" href="mercur.htm" alt="Mercury">
   			<area shape="circle" coords="124,58,8" href="venus.htm" alt="Venus">
+  			<area shape="poly" coords="124,58,8,91,100" href="venus.htm" alt="Venus">
+  			<area shape="default" coords="124,58,8,91,100" href="venus.htm" alt="Venus">
+
 		</map>
 </body>
 </html>
