--- a/q3.html
+++ b/q3.html
@@ -11,12 +11,24 @@
 	<input type="submit" name="Submit">
 	<input type="reset" name="Reset"><br>
 	Enter Password:
-	<input type="password" name="Password"><br>
+	<keygen name="security">
 	<textarea>This is a box</textarea>
 	<input type="checkbox" name="Degree" value="BTech">Btech<br>
 	<input type="checkbox" name="Degree" value="MTech">Mtech<br>
 	<input type="checkbox" name="Degree" value="DTech">Dtech<br>
-
+	Interests: 
+	<select name="int">
+  <option value="volvo">Machine Learning</option>
+  <option value="saab">Data Analytics</option>
+  <option value="fiat">Software eng</option>
+</select>
+	<datalist id="browsers">
+    <option value="Internet Explorer">
+    <option value="Firefox">
+    <option value="Chrome">
+    <option value="Opera">
+    <option value="Safari">
+  </datalist> 
 
 </form>
 </body>
